// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`TerrenoProvider renders correctly with default props 1`] = `
[
  {
    "$$typeof": Symbol(react.test.json),
    "children": [
      {
        "$$typeof": Symbol(react.test.json),
        "children": [
          {
            "$$typeof": Symbol(react.test.json),
            "children": [
              "App content",
            ],
            "props": {
              "style": undefined,
            },
            "type": "Text",
          },
        ],
        "props": {
          "style": undefined,
          "testID": undefined,
        },
        "type": "View",
      },
    ],
    "props": {
      "testID": "portal-host",
    },
    "type": "View",
  },
  {
    "$$typeof": Symbol(react.test.json),
    "children": [
      {
        "$$typeof": Symbol(react.test.json),
        "children": null,
        "props": {
          "style": {
            "pointerEvents": "box-none",
          },
        },
        "type": "SafeAreaView",
      },
    ],
    "props": {
      "behavior": "position",
      "style": [
        {
          "alignSelf": "center",
          "elevation": 999999,
          "flex": 0,
          "maxWidth": "100%",
          "pointerEvents": "box-none",
          "position": "absolute",
          "zIndex": 999999,
        },
        {
          "flexDirection": "column-reverse",
          "justifyContent": "flex-start",
          "top": 50,
          "width": 375,
        },
      ],
    },
    "type": "KeyboardAvoidingView",
  },
  {
    "$$typeof": Symbol(react.test.json),
    "children": [
      {
        "$$typeof": Symbol(react.test.json),
        "children": null,
        "props": {
          "style": {
            "pointerEvents": "box-none",
          },
        },
        "type": "SafeAreaView",
      },
    ],
    "props": {
      "behavior": "position",
      "style": [
        {
          "alignSelf": "center",
          "elevation": 999999,
          "flex": 0,
          "maxWidth": "100%",
          "pointerEvents": "box-none",
          "position": "absolute",
          "zIndex": 999999,
        },
        {
          "bottom": 50,
          "flexDirection": "column",
          "justifyContent": "flex-end",
          "width": 375,
        },
      ],
    },
    "type": "KeyboardAvoidingView",
  },
]
`;

exports[`TerrenoProvider renders with openAPISpecUrl 1`] = `
[
  {
    "$$typeof": Symbol(react.test.json),
    "children": [
      {
        "$$typeof": Symbol(react.test.json),
        "children": [
          "Content",
        ],
        "props": {
          "style": undefined,
        },
        "type": "Text",
      },
    ],
    "props": {
      "testID": "portal-host",
    },
    "type": "View",
  },
  {
    "$$typeof": Symbol(react.test.json),
    "children": [
      {
        "$$typeof": Symbol(react.test.json),
        "children": null,
        "props": {
          "style": {
            "pointerEvents": "box-none",
          },
        },
        "type": "SafeAreaView",
      },
    ],
    "props": {
      "behavior": "position",
      "style": [
        {
          "alignSelf": "center",
          "elevation": 999999,
          "flex": 0,
          "maxWidth": "100%",
          "pointerEvents": "box-none",
          "position": "absolute",
          "zIndex": 999999,
        },
        {
          "flexDirection": "column-reverse",
          "justifyContent": "flex-start",
          "top": 50,
          "width": 375,
        },
      ],
    },
    "type": "KeyboardAvoidingView",
  },
  {
    "$$typeof": Symbol(react.test.json),
    "children": [
      {
        "$$typeof": Symbol(react.test.json),
        "children": null,
        "props": {
          "style": {
            "pointerEvents": "box-none",
          },
        },
        "type": "SafeAreaView",
      },
    ],
    "props": {
      "behavior": "position",
      "style": [
        {
          "alignSelf": "center",
          "elevation": 999999,
          "flex": 0,
          "maxWidth": "100%",
          "pointerEvents": "box-none",
          "position": "absolute",
          "zIndex": 999999,
        },
        {
          "bottom": 50,
          "flexDirection": "column",
          "justifyContent": "flex-end",
          "width": 375,
        },
      ],
    },
    "type": "KeyboardAvoidingView",
  },
]
`;
